--- a/slim/index.slim
+++ b/slim/index.slim
@@ -74,6 +74,20 @@ html lang="ja"
 					p こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。
 					p こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。
 
+					table.list
+						tr
+							th タイトルタイトルタイトルタイトル
+							td 内容テキスト内容テキスト内容テキスト内容テキスト内容テキスト内容テキスト
+						tr
+							th タイトル
+							td 内容テキスト内容テキスト内容テキスト
+						tr
+							th タイトル
+							td 内容テキスト内容テキスト内容テキスト
+						tr
+							th タイトル
+							td 内容テキスト内容テキスト内容テキスト
+
 
 					ul.pageNav
 						li
