--- a/css/mycss.css
+++ b/css/mycss.css
@@ -158,6 +158,23 @@ div.sample > img {
   border: 1px solid #ccc;
 }
 
+table.list {
+  border-top: 1px solid #999;
+  border-left: 1px solid #999;
+  width: 100%;
+  margin-bottom: 15px;
+}
+table.list th {
+  background: #ddd;
+  width: 30%;
+}
+table.list th, table.list td {
+  border-right: 1px solid #999;
+  border-bottom: 1px solid #999;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 .badge {
   background: red;
   color: white;
@@ -271,6 +288,14 @@ ul.submenu > li {
   }
   #main #sidebar {
     float: none;
+    width: 100%;
+  }
+
+  table.list tr {
+    display: block;
+  }
+  table.list th, table.list td {
+    display: block;
     width: 100%;
   }
 
